// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`a bare autoLinked url 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "http://www.googl.com",
            },
          ],
          "title": null,
          "type": "link",
          "url": "http://www.googl.com",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`a bare autoLinked url with no protocol 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "www.google.com",
            },
          ],
          "title": null,
          "type": "link",
          "url": "http://www.google.com",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`a bracketed autoLinked url 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "http://www.google.com",
            },
          ],
          "title": null,
          "type": "link",
          "url": "http://www.google.com",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`a link ref 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "link",
            },
          ],
          "identifier": "link",
          "label": "link",
          "referenceType": "shortcut",
          "type": "linkReference",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`a link ref with reference 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "link",
            },
          ],
          "identifier": "link",
          "label": "link",
          "referenceType": "shortcut",
          "type": "linkReference",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "identifier": "link",
      "label": "link",
      "title": null,
      "type": "definition",
      "url": "www.example.com",
    },
  ],
  "type": "root",
}
`;

exports[`a link with label 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "link",
            },
          ],
          "title": null,
          "type": "link",
          "url": "http://www.foo.com",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`a link with no url 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "link",
            },
          ],
          "title": null,
          "type": "link",
          "url": "",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;
